# virtualpatch_data

./: README.md  aggregated-severity-cat-google-play.csv  apps.csv  bulletin_dates.csv  launch.csv  patches-valid.csv  traces.csv
container/: .gitignore  VAConfig.gradle  build.gradle  gradle.properties  settings.gradle
container/app/: build.gradle
container/app/src/main/: AndroidManifest.xml
container/app/src/main/res/layout/: activity_home.xml  activity_marker.xml  activity_mock_location.xml  content_toolbar.xml  item_launcher_app.xml
container/app/src/main/res/values/: strings.xml
container/app/src/main/res/values-zh-rCN/: strings.xml
container/app/src/main/res/values-zh-rTW/: strings.xml
container/container/: build.gradle
container/container/src/main/: AndroidManifest.xml
container/gradle/wrapper/: gradle-wrapper.properties
container/lib/: build.gradle  proguard-rules.pro
container/lib/src/main/jni/: Android.mk
container/lib/src/main/jni/Foundation/: MapsRedirector.cpp  MinikinHook.cpp  MinikinHook.h  minikin.c
container/lib/src/main/jni/Jni/: VAJni.cpp
container/lib/src/main/jni/transparentED/: BypassFile.cpp  BypassFile.h  TemplateFile.cpp  TemplateFile.h  (+3 more)
container/libsandhook/: build.gradle
container_generator/: generate.py  generate_all.py  template.py
evaluation/: README.md
notebooks/: bulletin_analysis_ICSE.ipynb  bulletin_dl_ICSE.ipynb  samsung_dl_ICSE.ipynb  traces_ICSE.ipynb
parse_traces/: Cargo.toml
parse_traces/src/: main.rs
patch_apis/: settings.gradle
patch_apis/gradle/wrapper/: gradle-wrapper.properties
(+72 files in other folders)
